--- a/client/package.json
+++ b/client/package.json
@@ -40,10 +40,14 @@
     "webpack-hot-middleware": "^2.24.3"
   },
   "dependencies": {
+    "connected-react-router": "^6.3.2",
     "express": "^4.16.4",
+    "history": "^4.9.0",
     "raven-js": "^3.27.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-router-dom": "^5.0.0"
+    "react-redux": "^7.0.2",
+    "react-router-dom": "^5.0.0",
+    "redux": "^4.0.1"
   }
 }
