--- a/.eslintrc
+++ b/.eslintrc
@@ -30,6 +30,7 @@
         "extensions": [".js", ".jsx"]
       }
     ],
-    "react/prefer-stateless-function": 0
+    "react/prefer-stateless-function": 0,
+    "react/forbid-prop-types": 0
   }
 }
