--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "connected-react-router": "^6.3.2",
     "express": "^4.16.4",
     "history": "^4.9.0",
+    "prop-types": "^15.7.2",
     "raven-js": "^3.27.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
