--- a/.eslintrc
+++ b/.eslintrc
@@ -24,13 +24,13 @@
         "devDependencies": true
       }
     ],
+    "react/prefer-stateless-function": 0,
+    "react/forbid-prop-types": 0,
     "react/jsx-filename-extension": [
       1,
       {
         "extensions": [".js", ".jsx"]
       }
-    ],
-    "react/prefer-stateless-function": 0,
-    "react/forbid-prop-types": 0
+    ]
   }
 }
